--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
 }
